# racer_3d

./: .gitignore  CMakeLists.txt  README.md  alinux_build  camera.h  cube.cpp  cube.h  effect.h  framebuffer.h  icosahedron.cpp  icosahedron.h  input.cpp  input.h  linux_build  mac_build  main.cpp  mesh.h  model.h  obstacle.h  player.cpp  player.h  prism.cpp  prism.h  scene.out  shader.h  skybox.cpp  skybox.h  stb_image.h
assets/: zone.glb  zone.mtl
glad/: glad.c  glad.h
shaders/: basic.vs  crash.fs  crash.vs  icosahedron.fs  icosahedron.vs  icosahedron_edge.fs  icosahedron_edge.vs  level.fs  level.vs  obstacle.fs  obstacle.vs  shader_pass1.vs  skybox.fs  skybox.vs
